remove ocaml deps

--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "@opam/dune": "*",
     "@opam/alcotest": "^1.0.1",
     "@opam/menhir": "20200211",
-    "@opam/sedlex": "^2.0.0",
-    "ocaml": "~4.9.0"
+    "@opam/sedlex": "^2.0.0"
   },
   "devDependencies": {
     "@opam/merlin": "3.3.3",
