--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "@opam/dune": "*",
     "@opam/alcotest": "^1.0.1",
     "@opam/menhir": "20200211",
-    "@opam/sedlex": "^2.0.0"
+    "@opam/sedlex": "^2.0.0",
+    "ocaml": ">=4.06.1"
   },
   "devDependencies": {
-    "@opam/merlin": "3.3.3",
-    "ocaml": "~4.9.0"
+    "@opam/merlin": "3.3.3"
   }
 }
